gcc/testsuite/gdc.test/runnable/imports/你好.d
module imports.你好;

int foo()
{
	return 0;
}
